# fast-dllm

./: .gitignore  README.md  pyproject.toml
examples/: compare_speed.py  generate.py
fastdllm/: __init__.py  attention.py  cli_generate.py  collator.py  config.py  data_packing.py  download_fineweb.py  generation.py  train.py  utils.py
fastdllm/data/: __init__.py
