[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastdllm"
version = "0.1.0"
description = "Fast-dLLM v2 style block-diffusion adaptation for HuggingFaceTB/SmolLM2-135M"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "1jmdev"}]
dependencies = [
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "numpy>=1.26.0",
  "safetensors>=0.4.3",
  "tokenizers>=0.19.1",
  "torch>=2.3.0",
  "tqdm>=4.66.0",
  "transformers>=4.44.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
fastdllm-download-fineweb = "fastdllm.download_fineweb:main"
fastdllm-train = "fastdllm.train:main"
fastdllm-generate = "fastdllm.cli_generate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastdllm*"]

[tool.ruff]
line-length = 100
target-version = "py310"
